--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "build-cmake",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A short description of your package",
   "repository": "https://github.com/siegelaaron94/atom-build-cake.git",
   "license": "MIT",
@@ -25,7 +25,8 @@
   },
   "keywords": [
     "cmake",
-    "build"
+    "build",
+    "clang"
   ],
   "main": "lib/cmake.js",
   "dependencies": {
