--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "build-cmake",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A short description of your package",
   "repository": "https://github.com/siegelaaron94/atom-build-cmake.git",
   "license": "MIT",
@@ -15,8 +15,7 @@
       }
     }
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "keywords": [
     "cmake",
     "build",
