Added Visual Studio Support.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "main": "lib/cmake.js",
   "dependencies": {
-    "voucher": "^0.1.2"
+    "voucher": "^0.1.2",
+    "glob": "^7.0.3"
   }
 }
