--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "build-cmake",
   "version": "0.3.2",
-  "description": "A short description of your package",
+  "description": "Generate and build cmake projects from within Atom.",
   "repository": "https://github.com/siegelaaron94/atom-build-cmake.git",
   "license": "MIT",
   "engines": {
